# legacy-puyo-tools

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  REUSE.toml  formats.md  pyproject.toml  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  gitleaks.yaml  pages.yaml  release.yaml
docs/: .markdownlint.yaml  formats.md
docs/source/: conf.py  games.md  index.md  install.md  usage.md
docs/source/api/: index.md
docs/source/api/legacy_puyo_tools/: cli.md  exceptions.md  legacy_puyo_tools.md  typing.md
docs/source/api/legacy_puyo_tools/formats/: base.md  fmp.md  formats.md  fpd.md  mtx.md
docs/source/develop/: license.md
docs/source/formats/: formats.md
src/legacy_puyo_tools/: __init__.py  __main__.py  _io.py  _math.py  cli.py  exceptions.py  fmp.py  fpd.py  io.py  mtx.py  typing.py
src/legacy_puyo_tools/cli/: __init__.py  _confopts.py  compress.py  confopts.py  convert.py  create.py  decompress.py
src/legacy_puyo_tools/compression/: lz11.py
src/legacy_puyo_tools/formats/: __init__.py  _csv.py  _graphic.py  _graphics.py  _io.py  _math.py  base.py  fmp.py  fnt.py  fpd.py  graphic.py  mtx.py
tests/: __init__.py  conftest.py  convert_fpd_test.py  convert_mtx_test.py  create_fpd_test.py  create_mtx_test.py  fmp_test.py  fnt_test.py  fpd_test.py  misc_test.py  mtx_test.py  samples.py
tests/data/: invalid.csv
tests/fmp_test/: ark.fmp  colored_ark.fmp  fusion.fmp
tests/fpd_test/: invalid.fpd  sample.csv  sample.fpd  sample.txt  surrogate.csv
